fix overflow

--- a/src/shared/styles/layout/app.scss
+++ b/src/shared/styles/layout/app.scss
@@ -47,11 +47,11 @@
     padding-inline: 16px;
   }
 
-  .l-scroll-panel {
-    @include scollbar;
-    height: clamp(500px, 74dvh, 590px);
-    overflow-x: hidden;
-  }
+  // .l-scroll-panel {
+  //   @include scollbar;
+  //   height: clamp(500px, 74dvh, 590px);
+  //   overflow-x: hidden;
+  // }
 }
 
 @include respond(lg) {
@@ -60,13 +60,13 @@
     padding-inline: 10px;
   }
 
-  .l-scroll-panel {
-    height: 590px;
-  }
+  // .l-scroll-panel {
+  //   height: 590px;
+  // }
 }
 
-@media (min-width: 768px) and (max-height: 520px) and (orientation: landscape) {
-  .l-scroll-panel {
-    height: 78dvh;
-  }
-}
+// @media (min-width: 768px) and (max-height: 520px) and (orientation: landscape) {
+//   .l-scroll-panel {
+//     height: 78dvh;
+//   }
+// }
